@@ -1,9 +1,5 @@
-DIST smplayer2-0.7.0_pre20111120.tar.xz 1165876 RMD160 e739a771d57a5fac7765498912a31fd1368947cd SHA1 2dd650fab4ccb385b3fba7574ad1300f3ce89607 SHA256 d7b2046ce4e94621c8ed88e068bce0fd7bf42137b54a16fa3cce677b0ad5d0b5
-DIST smplayer2-0.7.1_p20120301.tar.xz 1039036 RMD160 38c71ed95332ba5b2657cf9b1d8d80567345451a SHA1 b05cdbd6b9ca37ff3e0cf3f4c48cb5f6d05080cb SHA256 fb1b09f62f6f06e3544cbc64444bb5ea9484a3a973d445949f95fd3695686dbe
 DIST smplayer2-0.7.2_p20120522.tar.xz 1034192 RMD160 a305037c9dcce6dfdb479f9ff7ff63ef983cc1a2 SHA1 03d573b7b6abfe8e4f53651b97e298decf5d39ad SHA256 ae5dfe328208dc34a53d1439a9cbc1b4f3197fca2dd6e10f2fa5725296617e49
-EBUILD smplayer2-0.7.0_pre20111120.ebuild 1159 RMD160 9312c19b826a20301aa6f5a570236fdeb2f38e43 SHA1 69b044b353646557124f664907a723002ced5970 SHA256 2112c0083dd999d2e1eeeb55e020f022852a3eb4986acf76414eaa0e233ae2b1
-EBUILD smplayer2-0.7.1_p20120301.ebuild 1159 RMD160 6b72eeedf0eb2913f50d3c7e07bb8159d507e2ce SHA1 b960e8c48845ad8d78279776aa8b1d51b9c36e0c SHA256 bad7a0d4fddff36e5f3ec2e52328868f8b46ae2cebecf6bc8e45ac079e047a12
-EBUILD smplayer2-0.7.2_p20120522.ebuild 1211 RMD160 593e8b226249896384dd4d0acc402bcc6b23247d SHA1 933aab577648bdd0a2fa4f8e60063f7de9c3a3f6 SHA256 0d76eb8a5561476153b175dae7a4cecc9b0d35ce82e422951d6941a6a3f2eff1
-EBUILD smplayer2-9999.ebuild 1187 RMD160 ae5ea9c5be49bc2573fa7ccd9f0631b318ca75ba SHA1 26b27198cae8f38b5caca1e499112f3efde165f8 SHA256 5999852ffa5a80e29cab851b097a443457d0c2372749f03157ff445339b23f7b
-MISC ChangeLog 1484 RMD160 05ca95b12dfa23b892587d07afa059715427bd6a SHA1 7e4f2bdfe0fdb5dc341597ab0c70f3d935c284e8 SHA256 7ce247abe26126d582b87410663154be51c4239a029d6836ad4caf303edbcafb
+EBUILD smplayer2-0.7.2_p20120522.ebuild 1214 RMD160 fefbde5ad0c4234b4be8c717b0eec61c95b26c7b SHA1 70c0d05b5736b06dfcc6e297b7bbe6e3da6428d7 SHA256 c4529b9e20024c07d964706c670e9fae3df4ac2b622c1ef4f3595fa6bb073fb1
+EBUILD smplayer2-9999.ebuild 1190 RMD160 a412bda1c34e72623ca96653da5b214f7928787e SHA1 733818dd286b09a9f375d6eaa0696a54050dfcf6 SHA256 842480133510aef149d6d1f5e64084ba4a3d92788c1abe25834fd9789f2632c8
+MISC ChangeLog 1717 RMD160 012dd81bf9fc3ed79f9a4af2178fe91d757c07d6 SHA1 8d86d4d2ed6c7bc039de7852a184fc99628d7f81 SHA256 026c2ffdfa808f93c789c3bcefeec6ba5cff2b8218c3a875e67227b1ff38ba21
 MISC metadata.xml 450 RMD160 cd2c4ebf0bf6117c1f687debb852f047f1fe26b3 SHA1 5b722a28c53371f1842de9a5f5a94845dd72353c SHA256 71db0f73a5c68b0c249a1ae3c3bc12e31bf6ad51af8451706b0327c5d515e7c7
